# shm_image_problem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: shared_memory_wrapper.cpp  shared_memory_wrapper.h
image_processor/: image_processor.cpp  image_processor.h  main.cpp
image_reader/: image_reader.cpp  image_reader.h  main.cpp  shm.cpp  shm.h
shared/: shm.cpp  shm.h
